# Sistema_Gestion_Tareas

./: .gitignore  CAMBIOS_IMPLEMENTADOS.md  CMakeLists.txt  MEJORAS_IMPLEMENTADAS.md  README.md  build.bat  build.sh  rebuild.bat
include/managers/: NotificationManager.h  ProjectManager.h
include/models/: ActivityLog.h  Board.h  Project.h  Subtask.h  Task.h  TaskMemento.h  User.h
include/ui/: BoardWidget.h  ColumnWidget.h  MainWindow.h  ProjectDialog.h  TaskCard.h  TaskDialog.h
include/utils/: DataPersistence.h  DateUtils.h
src/: main.cpp
src/managers/: NotificationManager.cpp  ProjectManager.cpp
src/models/: ActivityLog.cpp  Board.cpp  Project.cpp  Subtask.cpp  Task.cpp  TaskMemento.cpp  User.cpp
src/ui/: BoardWidget.cpp  ColumnWidget.cpp  MainWindow.cpp  ProjectDialog.cpp  TaskCard.cpp  TaskDialog.cpp
src/utils/: DataPersistence.cpp  DateUtils.cpp
